--- a/modal.html
+++ b/modal.html
@@ -16,11 +16,8 @@
     <div class="wp-content">
       <h1>Chikmagalur</h1>
       <hr>
-      <ul>
-        <li>Chikmagalur is a hill station in Karnataka</li>
-        <li>Mountain range in the Western Ghats</li>
-        <li>Mullayanagiri Peak</li>
-      </ul>
+      <p>Chikmagalur is a hill station in Karnataka</p>
+      <p>Mullayanagiri Peak</p>
       <a href="#" id="button-popup-close">Close</a>
     </div>
   </div>
